<resources>
    <string name="app_name" translatable="false">EdXposed Manager</string>
    <string name="action_settings">Settings</string>
    <string name="Activated">Activated</string>
    <string name="Inactivate">Inactivate</string>
    <string name="Install">Install</string>
    <string name="InstallDetail">Tap to install EdXposed</string>
    <string name="ActivatedDetail">EdXposed is activated</string>
    <string name="Modules">Modules</string>
    <string name="ModulesDetail">%d modules enabled</string>
    <string name="Downloads">Downloads</string>
    <string name="ModuleUpgradable">%s modules can be upgraded</string>
    <string name="ModuleUptodate">All modules are up-to-date</string>
    <string name="Apps">Apps</string>
    <string name="Logs">Logs</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="restart_needed">Restart needed</string>
    <string name="cache_cleaned">App\'s cache has been cleaned. Restart is needed</string>
    <string name="menuSend">Send</string>
    <string name="menuSaveToSd">Save to SD card</string>
    <string name="tabInstall">Device</string>
    <string name="welcome_framework_update_available">An update for the EdXposed Framework is available (%s)</string>
    <string name="nav_item_modules">Modules</string>
    <string name="nav_item_download">Download</string>
    <string name="nav_item_logs">Verbose Logs</string>
    <string name="nav_item_logs_err">Modules Logs</string>
    <string name="install">Install/Update</string>
    <string name="uninstall">Uninstall</string>
    <string name="soft_reboot">Soft reboot</string>
    <string name="reboot">Reboot</string>
    <string name="areyousure">Are you sure?</string>
    <string name="reboot_failed">Reboot failed. Please use the device\'s normal reboot function</string>
    <string name="install_warning_title">Be careful!</string>
    <string name="install_warning">In some cases, your device might no longer boot after installing EdXposed.\n\nIf you never heard about \"soft brick\" and \"bootloop\" before or if you don\'t know how to recover from such a situation, do <b>NOT</b> install or use EdXposed!\n\nIn any case, having a recent backup is highly recommended.</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="installed_lollipop_inactive">EdXposed Framework is installed, but not active\nPlease check the logs for details</string>
    <string name="modules_updates_available">Module update(s) are available</string>
    <string name="root_failed">Failed to get root access\n\nMake sure your device is rooted properly and you have not blocked shell commands</string>
    <string name="module_is_not_activated_yet">EdXposed module is not activated yet</string>
    <string name="module_is_not_activated_yet_detailed">%s has been installed, but is not activated yet</string>
    <string name="activate_and_reboot">Activate and reboot</string>
    <string name="activate_only">Activate only</string>
    <string name="module_activated">EdXposed module has been activated</string>
    <string name="module_empty_description">(no description provided)</string>
    <string name="module_no_ui">This module does not provide a user interface</string>
    <string name="xposed_module_list_updated">EdXposed module list was updated\nChanges will become active on reboot</string>
    <string name="xposed_module_updated_notification_title">EdXposed module updated</string>
    <string name="xposed_module_updated_notification">Reboot to activate changes</string>
    <string name="warning_xposed_min_version">This module requires a newer EdXposed version (%d) and thus cannot be activated</string>
    <string name="no_min_version_specified">This module does not specify the EdXposed version it needs.</string>
    <string name="warning_min_version_too_low">This module was created for EdXposed version %1$d, but due to incompatible changes in version %2$d, it has been disabled</string>
    <string name="module_launch">Launch UI</string>
    <string name="module_download_updates">Download/Updates</string>
    <string name="module_support">Support</string>
    <string name="modules_app_store">View in App Store</string>
    <string name="module_app_info">App info</string>
    <string name="module_uninstall">Uninstall</string>
    <string name="menuSearch">Search</string>
    <string name="menuReload">Reload</string>
    <string name="changes">Changelog:</string>
    <string name="download_details_page_description">Description</string>
    <string name="download_details_page_versions">Versions</string>
    <string name="download_details_page_settings">Settings</string>
    <string name="reltype_stable">Stable</string>
    <string name="reltype_stable_summary">Stable (low risk of bugs)</string>
    <string name="reltype_beta">Beta</string>
    <string name="reltype_beta_summary">Beta (some bugs to be expected)</string>
    <string name="reltype_experimental">Experimental</string>
    <string name="reltype_experimental_summary">Experimental (high risk of bugs)</string>
    <string name="reltype_use_global_summary">Use global setting</string>
    <string name="download_author">by %s</string>
    <string name="download_unknown_author">unknown author</string>
    <string name="download_status_installed">Installed (version %s)</string>
    <string name="download_status_update_available">Update available (version %1$s \u2192 %2$s)</string>
    <string name="download_timestamps">Added on %1$s \u00b7 Updated on %2$s</string>
    <string name="install_timestamps">Installed on %1$s\nUpdated on %2$s</string>
    <string name="download_sorting_title">Sorting order</string>
    <string name="download_sorting_status">Sort by status</string>
    <string name="download_sorting_updated">Sort by last update</string>
    <string name="download_sorting_created">Sort by creation date</string>
    <string name="download_section_framework">EdXposed Framework</string>
    <string name="download_section_update_available">Update available</string>
    <string name="download_section_installed">Installed</string>
    <string name="download_section_not_installed">Not installed</string>
    <string name="download_section_24h">Last 24 hours</string>
    <string name="download_section_7d">Last 7 days</string>
    <string name="download_section_30d">Last 30 days</string>
    <string name="download_section_older">More than 30 days ago</string>
    <string name="download_details_not_found">There is no module with package name \"%s\" in the repository</string>
    <string name="download_no_versions">The author hasn\'t uploaded anything yet</string>
    <string name="download_test_version_not_shown">A test version is available, however it isn\'t shown due to your global or module-specific settings</string>
    <string name="settings_group_download">Download and install</string>
    <string name="settings_release_type">Versions to be shown</string>
    <string name="settings_group_framework">Framework</string>
    <string name="settings_disable_resources">Disabled resource hooks</string>
    <string name="settings_disable_resources_summary">Workaround for conflicts with theming engines\n<b>WARNING:</b> Modules which try to change resources will not work when this is enabled</string>
    <string name="settings_group_app">Application</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="support_modules_label">Support for modules</string>
    <string name="support_modules_description">Click any module in the modules list and select \"%1$s\".</string>
    <string name="support_framework_label">Framework/Manager support</string>
    <string name="support_faq_label">FAQ/known issues</string>
    <string name="support_group_qq">QQ Group: 855219808</string>
    <string name="support_group_telegram">Telegram Group: @Code_of_MeowCat</string>
    <string name="support_donate_label">Donate</string>
    <string name="support_donate_description">If you would like to say thanks for EdXposed, you can donate to our here</string>
    <string name="logs_save_failed">Could not write log to SD card:</string>
    <string name="menuClearLog">Clear log now</string>
    <string name="logs_cleared">Log successfully cleared.</string>
    <string name="logs_clear_failed">Could not clear the log:</string>
    <string name="log_is_empty">Log is empty.</string>
    <string name="about_developers_label">Main developers</string>
    <string name="about_translator_label">Translator</string>
    <string name="translator">MlgmXyysd</string>
    <string name="about_version_label">Version</string>
    <string name="about_source_label">Source code</string>
    <string name="about_libraries_label">Used libraries</string>
    <string name="download_view_download">Download and Install</string>
    <string name="download_view_install">Install</string>
    <string name="download_view_cancel">Cancel</string>
    <string name="download_view_no_url">No download URL available</string>
    <string name="download_view_running">Download is running (%1$,d of %2$,d kB)</string>
    <string name="download_view_waiting">Download is waiting</string>
    <string name="download_view_successful">Download successful</string>
    <string name="download_view_failed">Download failed (error %d)</string>
    <string name="download_md5sum_incorrect">MD5 sum is incorrect (downloaded: %1$s, expected: %2$s)</string>
    <string name="export_">Export…</string>
    <string name="import_">Import…</string>
    <string name="export_enabled_modules">Export enabled modules list</string>
    <string name="import_enabled_modules">Import enabled modules list</string>
    <string name="export_installed_modules">Export installed modules list</string>
    <string name="import_installed_modules">Import installed modules list</string>
    <string name="scroll_top">Scroll to top</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bootloader">Reboot to Bootloader</string>
    <string name="reboot_download">Reboot to Download</string>
    <string name="reboot_edl">Reboot to Emergency</string>
    <string name="scroll_bottom">Scroll to bottom</string>
    <string name="skip_xposedminversion_check">Skip status check</string>
    <string name="skip_xposedminversion_check_summ">Skip \"EdXposed Status\" check for modules</string>
    <string name="menu_title_compile_reset">De-optimize</string>
    <string name="menu_title_compile_speed">Optimize with Speed mode</string>
    <string name="menu_title_compile_dexopt">Optimize with Dexopt mode</string>
    <string name="pref_title_disable_verbose_log">Disable verbose logs</string>
    <string name="app_launch">Launch it</string>
    <string name="app_stop">Stop it</string>
    <string name="hook_modules">Force hook modules</string>
    <string name="hook_modules_summary">Force add modules to white-list and remove from black list\nClosing this option does not remove modules from white list\nApp list mode is required to enable</string>
    <string name="reboot_system">Reboot to System</string>
    <string name="pref_title_disable_modules_log">Disable modules logs</string>
    <string name="pref_disable_modules_log_summary">Exception stack thrown by the module will still be catched normally</string>
    <string name="pure_black_dark_theme">Use the pure black dark theme</string>
    <string name="transparent_status_bar">Transparent status bar</string>
    <string name="primary_color">Primary color</string>
    <string name="accent_color">Accent color</string>
    <string name="colorized_action_bar">Colorized action bar</string>
    <string name="settings_group_theme">Theme</string>
    <string name="material_design_2">Material Design 2</string>
</resources>