<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_group_app"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="skip_xposedminversion_check"
            android:summary="@string/skip_xposedminversion_check_summ"
            android:title="@string/skip_xposedminversion_check"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="hook_modules"
            android:summary="@string/hook_modules_summary"
            android:title="@string/hook_modules"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_group_theme"
        app:iconSpaceReserved="false">
        <io.github.lsposed.manager.ui.widget.ThemeColorPreference
            android:defaultValue="#1976D2"
            android:dialogTitle="@string/primary_color"
            android:key="primary_color"
            android:title="@string/primary_color"
            app:iconSpaceReserved="false" />
        <io.github.lsposed.manager.ui.widget.ThemeColorPreference
            android:defaultValue="#e91e63"
            android:dialogTitle="@string/accent_color"
            android:key="accent_color"
            android:title="@string/accent_color"
            app:iconSpaceReserved="false" />
        <io.github.lsposed.manager.ui.widget.IntegerListPreference
            android:defaultValue="-1"
            android:entries="@array/theme_texts"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:summary="%s"
            android:title="@string/settings_theme"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:key="md2"
            android:title="@string/material_design_2"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:key="colorized_action_bar"
            android:title="@string/colorized_action_bar"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:key="transparent_status_bar"
            android:title="@string/transparent_status_bar"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:key="black_dark_theme"
            android:title="@string/pure_black_dark_theme"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="group_framework"
        android:title="@string/settings_group_framework"
        app:iconSpaceReserved="false">

        <SimpleMenuPreference
            android:defaultValue="1"
            android:entries="@array/variant_texts"
            android:entryValues="@array/variant_values"
            android:key="variant"
            android:summary="%s"
            android:title="@string/settings_variant"
            android:persistent="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enable_resources"
            android:summary="@string/settings_enable_resources_summary"
            android:title="@string/settings_enable_resources"
            android:persistent="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disable_verbose_log"
            android:title="@string/pref_title_disable_verbose_log"
            android:persistent="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disable_modules_log"
            android:summary="@string/pref_disable_modules_log_summary"
            android:title="@string/pref_title_disable_modules_log"
            android:persistent="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>