<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/menuSaveToSd"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/ic_send"
        android:title="@string/menuSend"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menuReload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_scroll_top"
        android:title="@string/scroll_top"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_scroll_down"
        android:title="@string/scroll_bottom"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear"
        android:title="@string/menuClearLog"
        app:showAsAction="never" />

</menu>